Sat Jun 05 07:21:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

	* protocols/ace/INet/HTTP_URL.h:
	* protocols/ace/INet/HTTP_URL.inl:
	  Fix for HPUX compile warning.

Sat Jun 05 07:11:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

	* protocols/ace/INet/HTTP_StreamPolicy.cpp:
	* protocols/ace/INet/HTTP_StreamPolicy.h:
	  Fix attempt for AIX compile problem.

Sat Jun 05 06:21:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

	* protocols/ace/INet/HTTP_URL.cpp:
	  Fixed typo.

Sat Jun 05 06:09:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

	* protocols/ace/INet/IOS_util.h:
	  Fixed missing export declaration.

	* protocols/ace/INet/URLBase.h:
	* protocols/ace/INet/URLBase.cpp:
	  Fixed missing virtual destructor.

Fri Jun 04 18:48:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

	* protocols/ace/INet:
	* protocols/ace/INet/BidirStreamBuffer.cpp:
	* protocols/ace/INet/BidirStreamBuffer.h:
	* protocols/ace/INet/BufferedStreamBuffer.cpp:
	* protocols/ace/INet/BufferedStreamBuffer.h:
	* protocols/ace/INet/ClientRequestHandler.cpp:
	* protocols/ace/INet/ClientRequestHandler.h:
	* protocols/ace/INet/ClientRequestHandler.inl:
	* protocols/ace/INet/ConnectionCache.cpp:
	* protocols/ace/INet/ConnectionCache.h:
	* protocols/ace/INet/ConnectionCache.inl:
	* protocols/ace/INet/HeaderBase.cpp:
	* protocols/ace/INet/HeaderBase.h:
	* protocols/ace/INet/HeaderBase.inl:
	* protocols/ace/INet/HTTP_ClientRequestHandler.cpp:
	* protocols/ace/INet/HTTP_ClientRequestHandler.h:
	* protocols/ace/INet/HTTP_ClientRequestHandler.inl:
	* protocols/ace/INet/HTTP_Header.cpp:
	* protocols/ace/INet/HTTP_Header.h:
	* protocols/ace/INet/HTTP_Header.inl:
	* protocols/ace/INet/HTTP_IOStream.cpp:
	* protocols/ace/INet/HTTP_IOStream.h:
	* protocols/ace/INet/HTTP_IOStream.inl:
	* protocols/ace/INet/HTTP_Request.cpp:
	* protocols/ace/INet/HTTP_Request.h:
	* protocols/ace/INet/HTTP_Request.inl:
	* protocols/ace/INet/HTTP_Response.cpp:
	* protocols/ace/INet/HTTP_Response.h: