@@ -1,3 +1,9 @@
+Sat Jun 05 07:32:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>
+
+	* protocols/ace/INet/ConnectionCache.cpp:
+	* protocols/ace/INet/ConnectionCache.h:
+	  Fix for nameclash with standard macro in VxWorks.
+
 Sat Jun 05 07:21:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>
 
 	* protocols/ace/INet/HTTP_URL.h:
